Add viewing of interesting objects. Fix little issues.

--- a/views/animation.pug
+++ b/views/animation.pug
@@ -20,7 +20,7 @@ html
                     input(type="button" name="nextStep" class="btn btn-primary btn-animation btnRunStep" value="Run next step")
                 div(class="form-group")
                     label(class="form-label" for="stepsSlider") Current state of animation
-                    input(type="range" name="stepsSlaider" class="form-control stepIndicator" min = "1" class="form-range" value="1" disabled)
+                    input(type="range" name="stepsSlider" class="form-control stepIndicator" min = "1" class="form-range" value="1" disabled)
                 div(class="form-group")
                     label(class="form-label" for="restartButton") Restart button (to reload animation and reenable buttons)
                     input(type="button" name="restartButton" class="btn btn-primary btn-animation btnRestart" value="Reset animation")
