=Added basic viewer and basic Mobius strip animation

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,10 +11,10 @@ html
                 li(data-target="#carouselExampleIndicators" data-slide-to="1")
             div(class="carousel-inner")
                 div(class="carousel-item active")
-                    a(href="/predefined-animations/toroid-to-mug")
-                        img(src="/img/toroid_to_mug.jpg" alt="Toroid to mug")
+                    a(href="/predefined-animations/torus-to-mug")
+                        img(src="/img/toroid_to_mug.jpg" alt="Torus to mug")
                     div(class="carousel-caption d-none d-md-block")
-                        h5 Toroid to mug animation
+                        h5 Torus to mug animation
                         p Vintage example of topological homeomorphism between two genus-1 objects: toroidal loop and a mug.
                 div(class="carousel-item")
                     a(href='/predefined-animations/resolve-hooked-loops')
