--- a/views/index.pug
+++ b/views/index.pug
@@ -13,15 +13,15 @@ html
                 div(class="carousel-item active")
                     a(href="/predefined-animations/torus-to-mug")
                         img(src="/img/toroid_to_mug.jpg" alt="Torus to mug")
-                    div(class="carousel-caption d-none d-md-block")
-                        h5 Torus to mug animation
-                        p Vintage example of topological homeomorphism between two genus-1 objects: toroidal loop and a mug.
+                        div(class="carousel-caption d-none d-md-block")
+                            h5 Torus to mug animation
+                            p Topological homeomorphism between two genus-1 objects: a torus and a mug.
                 div(class="carousel-item")
                     a(href='/predefined-animations/resolve-hooked-loops')
                         img(src="/img/resolve_hooked_loops.jpg" alt="Resolve hooked loops")
-                    div(class="carousel-caption d-none d-md-block")
-                        h5 Resolve loops animation
-                        p Surprising homeomorphisem between hooked loops and two conjoined loops
+                        div(class="carousel-caption d-none d-md-block")
+                            h5 Resolve loops animation
+                            p Surprising homeomorphisem between linked loops and double torus
         
             a(class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev")
                 span(class="carousel-control-prev-icon" aria-hidden="true")
@@ -29,5 +29,14 @@ html
             a(class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next")
                 span(class="carousel-control-next-icon" aria-hidden="true")
                 span(class="sr-only") Next
+
+        div(class="card projectDescription")
+            div(class="card-header")
+                h5 Topology visualiser
+            div(class="card-body")
+                p Topology visualiser is a tool for watching typical topological objects and animations showing transformations between some of the homeomorphic objects. The idea originated due to lack of similiar tools allowing not only to watch transformation, but also change camera's perspective, select its speed or zooming in/out. 
+                p User may select one of the predefined animations of transformations between two homeomorphic objects by using navbar on the top of the page or by using carousel menu on the left.
+                p By selecting option 'Object list' from the navbar, user will open viewer of some of the topological objects.
+                p The project was created as a part of engineering degree thesis.
         include footer.pug
         include basic_scripts.pug
