--- a/views/watching_objects.pug
+++ b/views/watching_objects.pug
@@ -9,6 +9,8 @@ html
         section(class='menu card text-white bg-dark')
             section(class="card-header") Menu
             section(class="card-body")
+                p List of some of the basic object with a brief description of its topological characteristic. Use your mouse to rotate and zoom objects.
+                br
                 div(class="form-group")
                     input(type="button" class="btn btn-primary" name="torus" value="Torus")
                 div(class="form-group")
