--- a/views/animation.pug
+++ b/views/animation.pug
@@ -15,8 +15,9 @@ html
                     input(type="text" class="form-control rangeIndicator" disabled)
                 div(class="form-group")
                     input(type="button" class="btn btn-primary btn-animation btnRunAuto" value="Run automatically with selected speed")
+                br
                 div(class="form-group")
-                    label(class="form-label" for="nextStep") Run animation step by step with descriptive messages displayed between steps
+                    label(class="form-label" for="nextStep") Run animation frame by frame with descriptive messages displayed for major steps
                     input(type="button" name="nextStep" class="btn btn-primary btn-animation btnRunStep" value="Run next step")
                 div(class="form-group")
                     label(class="form-label" for="stepsSlider") Current state of animation
