--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -5,10 +5,10 @@ nav(class='navbar navbar-expand-lg navbar-dark bg-dark')
     div(class='collapse navbar-collapse' id='navbarNav')
         ul(class='navbar-nav')
             li(class='nav-item active')
-                a(class='nav-link' href='/view-objects') View interesting objects 
+                a(class='nav-link' href='/view-objects') Object list
             li(class='nav-item active')
                 a(class='nav-link' href='/predefined-animations/torus-to-mug') Torus to mug
             li(class='nav-item active') 
-                a(class='nav-link' href='/predefined-animations/resolve-hooked-loops') Resolve hooked loops
+                a(class='nav-link' href='/predefined-animations/resolve-hooked-loops') Linked loops
             li(class='nav-item active')
                 a(class='nav-link' href='/predefined-animations/boat-to-torus') Boat to torus
