=Next post-review changes

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title Topology visualizer - engineering deegree project
+        title Topology visualiser - engineering deegree project
         include basic_styles.pug
     body
         include navbar.pug
