=Minor changes before final commit

--- a/views/index.pug
+++ b/views/index.pug
@@ -17,8 +17,8 @@ html
                             h5 Torus to mug animation
                             p Topological homeomorphism between two genus-1 objects: a torus and a mug.
                 div(class="carousel-item")
-                    a(href='/predefined-animations/resolve-hooked-loops')
-                        img(src="/img/resolve_hooked_loops.jpg" alt="Resolve hooked loops")
+                    a(href='/predefined-animations/linked-loops')
+                        img(src="/img/resolve_hooked_loops.jpg" alt="Linked loops")
                         div(class="carousel-caption d-none d-md-block")
                             h5 Resolve loops animation
                             p Surprising homeomorphisem between linked loops and double torus
@@ -37,6 +37,6 @@ html
                 p Topology visualiser is a tool for watching typical topological objects and animations showing transformations between some of the homeomorphic objects. The idea originated due to lack of similiar tools allowing not only to watch transformation, but also change camera's perspective, select its speed or zooming in/out. 
                 p User may select one of the predefined animations of transformations between two homeomorphic objects by using navbar on the top of the page or by using carousel menu on the left.
                 p By selecting option 'Object list' from the navbar, user will open viewer of some of the topological objects.
-                p The project was created as a part of engineering degree thesis.
+                p The project was created as a part of engineering degree thesis by Wojciech Gomułka (Wojciech.Gomulka@fis.agh.edu.pl)
         include footer.pug
         include basic_scripts.pug
