--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,5 +1,5 @@
 nav(class='navbar navbar-expand-lg navbar-dark bg-dark')
-    a( class='navbar-brand' href='/') Topology visualizer
+    a( class='navbar-brand' href='/') Topology visualiser
     button(class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
         span(class='navbar-toggler-icon')
     div(class='collapse navbar-collapse' id='navbarNav')
